# adbfly

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  README.pt-BR.md  adbfly.ini.example  mkdocs.yml  next.config.js  package-lock.json  package.json  planning.md  playwright.config.ts  requirements-docs.txt  tailwind.config.js
.ai/: SKILL.md
.ai/stitch/: DESIGN.md  code.html
.github/workflows/: docs.yml  pr-e2e.yml  release.yml  tag.yml
docs/: architecture.es.md  architecture.md  architecture.pt-BR.md  contributing.es.md  contributing.md  contributing.pt-BR.md  design-standards.md  getting-started.es.md  getting-started.md  getting-started.pt-BR.md  index.es.md  index.md  index.pt-BR.md  user-guide.es.md  user-guide.md  user-guide.pt-BR.md
scripts/: tauri-runner.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/use_cases/: database_use_cases.rs  device_use_cases.rs  mod.rs
src-tauri/src/domain/: entities.rs  ports.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/adb/: adapter.rs  mod.rs
src-tauri/src/infrastructure/base64/: decoder.rs  mod.rs
src-tauri/src/infrastructure/sqlite/: repository.rs
src-tauri/src/presentation/: commands.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: toast-provider.tsx
src/hooks/: use-workspace-state.ts
src/lib/: I18nContext.tsx  api.ts  i18n.ts  mock-adb.ts  types.ts  (+2 more)
(+24 files in other folders)
